leftside bar done

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
   text-align: none;
   list-style: none;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  text-decoration: none;
+  outline: none;
+  border: none;
 }
 
 :root{
@@ -15,6 +18,19 @@
   --color-soft:#aaaaaa;
   --color-border:lightgray;
   --color-red:red;
+}
+
+.darkmood{
+  --text-color:white;
+  --color-bg:black;
+  --color-card:#111111;
+  --color-soft:#aaaaaa;
+  --color-border:lightgray;
+
+}
+
+body{
+  overflow-x:hidden ;
 }
 
 .container{
@@ -89,3 +105,11 @@ small,p{
   background: var(--color-red);
   color:white;
 }
+
+main{
+  display: grid;
+  grid-template-columns: 20% 54% 23%;
+  gap: 3%;
+  width: 95%;
+}
+
