--- a/src/components/rightbar/rightbar.css
+++ b/src/components/rightbar/rightbar.css
@@ -16,3 +16,15 @@
     width:80%;
     
 }
+
+@media(max-width:1024px){
+    .rightBar-container{
+     width: 90%;
+    }
+}
+
+@media(max-width:768px){
+    .rightBar{
+        display: none;
+    }
+}
